	PR rtl-optimization/44013 	* sched-deps.c (add_dependence_list_and_free): Don't free lists 	when processing debug insns.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160281 138bc75d-0d04-0410-961f-82ee72b054a4